--- a/22.07.2021/Python/config.ini
+++ b/22.07.2021/Python/config.ini
@@ -1,3 +1,10 @@
+[CARD]
+number = 1234 1234 1234 1234
+pin = 1111
+cvv = 123
+date = 01-09-2027
+otp = 12121212
+
 [NET BANKING]
 username = testuser
 password = test
@@ -11,6 +18,8 @@ upi id = 1234567898@YPI
 pin = 1234
 
 [PAYTM]
-upi id = mohamedpt@xyz
-pin = 1234
+upi id = mohamedpt@oksi
+pin =
 
+[COD]
+pwd = 1234
