--- a/Project/Code/Medicheckv2/config1.ini
+++ b/Project/Code/Medicheckv2/config1.ini
@@ -6,11 +6,11 @@ host = *
 
 [database]
 engine = django.db.backends.mysql
-name = medicheck
+name = medicheckv2
 host = 127.0.0.1
 port = 3306
 user = root
 password = water
 
 [secretkey]
-KEY = django-insecure-d+l^04h4bf(3#(lnsjx0ad-*qlu3c7^9())a(4!@@^-zu$zvb( 
+KEY = django-insecure-0zj*o#qkt$on#qc$sm4%k5x3pu^jnx)_=p)zq#pvp+qd-xw(7f 
