--- a/ReactJS/CRUD/CRUDApplication/frontend/package.json
+++ b/ReactJS/CRUD/CRUDApplication/frontend/package.json
@@ -4,14 +4,20 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^2.8.5",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "history": "^5.1.0",
+    "material-ui": "^1.0.0-beta.47",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-google-invisible-recaptcha": "^0.2.12",
+    "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.22.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
@@ -22,6 +28,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "cypress:open": "cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -41,5 +48,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/cypress": "^8.0.2",
+    "cypress": "^9.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
+    "react-test-renderer": "^17.0.2"
   }
 }
